<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Histórico das operações -->

    <ScrollView
        android:id="@+id/sv_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Funciona no celular, no computador trocar para #000000-->
        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textSize="24sp" />

    </ScrollView>

    <Button
        android:id="@+id/btn_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="0dp"
        android:text="@string/clear_history"
        app:layout_constraintBottom_toBottomOf="@id/sv_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sv_history"
        app:layout_constraintStart_toStartOf="@+id/sv_history"
        app:layout_constraintTop_toTopOf="@id/sv_history" />

    <!-- Visor para o resultado -->
    <!-- Funciona no celular, no computador trocar para #000000-->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="28sp"
        android:padding="8dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/sv_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1" />

    <!-- GridLayout para os botões -->
    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.7">

        <!-- Botões da calculadora -->
        <Button
            android:text="@string/seven"
            android:id="@+id/btn_7"
            style="@style/CalcButton" />
        <Button
            android:text="@string/eight"
            android:id="@+id/btn_8"
            style="@style/CalcButton" />
        <Button
            android:text="@string/nine"
            android:id="@+id/btn_9"
            style="@style/CalcButton" />
        <Button
            android:text="@string/divide"
            android:id="@+id/btn_divide"
            style="@style/CalcButton" />

        <Button
            android:text="@string/four"
            android:id="@+id/btn_4"
            style="@style/CalcButton" />
        <Button
            android:text="@string/five"
            android:id="@+id/btn_5"
            style="@style/CalcButton" />
        <Button
            android:text="@string/six"
            android:id="@+id/btn_6"
            style="@style/CalcButton" />
        <Button
            android:text="@string/multiply"
            android:id="@+id/btn_multiply"
            style="@style/CalcButton" />

        <Button
            android:text="@string/one"
            android:id="@+id/btn_1"
            style="@style/CalcButton" />
        <Button
            android:text="@string/two"
            android:id="@+id/btn_2"
            style="@style/CalcButton" />
        <Button
            android:text="@string/three"
            android:id="@+id/btn_3"
            style="@style/CalcButton" />
        <Button
            android:text="@string/subtract"
            android:id="@+id/btn_subtract"
            style="@style/CalcButton" />

        <Button
            android:text="@string/zero"
            android:id="@+id/btn_0"
            style="@style/CalcButton" />
        <Button
            android:text="@string/clear"
            android:id="@+id/btn_clear"
            style="@style/CalcButton" />
        <Button
            android:text="@string/equal"
            android:id="@+id/btn_equals"
            style="@style/CalcButton" />
        <Button
            android:text="@string/plus"
            android:id="@+id/btn_add"
            style="@style/CalcButton" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
